# Simple-IRC-Server

./: .gitignore  CMakeLists.txt  README.md  main_client.cpp  main_server.cpp
include/: channel.hpp  client.hpp  database.hpp  server.hpp  server_client.hpp
src/: channel.cpp  client.cpp  database.cpp  server.cpp  server_client.cpp
src/handlers/: add_handler.cpp  add_user_handlers.cpp  drop_handler.cpp  exit_handler.cpp  listChats_handler.cpp  listUsers_handler.cpp  passwd_handler.cpp  quit_command_hander.cpp  send_handler.cpp  user_handler.cpp
